fix scrollbar

--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -21,16 +21,35 @@
 }
 
 // TABLE STYLE
+/* 1. Assicuriamoci che l'overflow sia attivo per scrollare */
 .p-datatable-table-container {
-  scrollbar-width: none;
+  overflow-y: auto !important;
+  overflow-x: auto !important;
   -ms-overflow-style: none;
 }
 
 .p-datatable-table-container::-webkit-scrollbar {
-  width: 0;
-  height: 0;
+  height: 8px !important;
+  width: 0px !important;
 }
 
+.p-datatable-table-container::-webkit-scrollbar-thumb:vertical,
+.p-datatable-table-container::-webkit-scrollbar-track:vertical,
+.p-datatable-table-container::-webkit-scrollbar-corner {
+  background: transparent !important;
+  display: none !important;
+}
+
+.p-datatable-table-container::-webkit-scrollbar-thumb:horizontal {
+  background-color: #333 !important;
+  border-radius: 10px !important;
+  visibility: visible !important;
+}
+
+.p-datatable-table-container::-webkit-scrollbar-track:horizontal {
+  // background: #f1f1f1 !important;
+  visibility: visible !important;
+}
 // INPUT STYLE
 .p-select .p-select-label {
   color: #ffffff;
